--- a/doc/pydblite.css
+++ b/doc/pydblite.css
@@ -1,138 +1,138 @@
 body
-	{
-	color: #000000;
-	background-image:url(img/bg.jpg);
-	background-repeat:repeat-x;
-	background-attachment:fixed;
-	font-size: 13;
-	font-family:Trebuchet-MS;
-	}
+    {
+    color: #000000;
+    background-image:url(img/bg.jpg);
+    background-repeat:repeat-x;
+    background-attachment:fixed;
+    font-size: 13;
+    font-family:Trebuchet-MS;
+    }
 
 td.navigation
-	{ 
-	background-color: #17171b;
-	font-weight: bold;
-	font-size: 150%;
-	width: 90%;
-	}
+    { 
+    background-color: #17171b;
+    font-weight: bold;
+    font-size: 150%;
+    width: 90%;
+    }
 
 td.lnk 
-	{ 
-	background-color: #17171b;
-	font-size: 100%;
+    { 
+    background-color: #17171b;
+    font-size: 100%;
     }
 
 pre 
-	{
-	font-family: arial 
-	}
+    {
+    font-family: arial 
+    }
 
 li 
-	{ 
-	padding-bottom:10;
-	}
+    { 
+    padding-bottom:10;
+    }
 
 span.python 
-	{
-	color:330099;
-	font-family: "Courier New";
-	}
+    {
+    color:330099;
+    font-family: "Courier New";
+    }
 
 div.python 
-	{
-	color:330099;
-	font-family: "Courier New";
-	margin-left:40px;
-	margin-top: 5px;
-	margin-bottom: 5px;
-	}
+    {
+    color:330099;
+    font-family: "Courier New";
+    margin-left:40px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    }
 
 .console 
-	{
-	color:white;
-	background-color:black;
-	font-family: "Courier New";
-	padding : 3;
-	}
+    {
+    color:white;
+    background-color:black;
+    font-family: "Courier New";
+    padding : 3;
+    }
 
 
 td.menu
-	{ 
-	vertical-align:top;
-	background-color: #E3E3E3;
-	font-size: 80%;
+    { 
+    vertical-align:top;
+    background-color: #E3E3E3;
+    font-size: 80%;
     }
 #niveau1
-	{
-	margin-top:0px;
-	padding-bottom:5px;
-	font-size:17px;
-	background-color:#9ac1c4;
-	padding-left:5px;
-	border:1px solid black;
-	}
+    {
+    margin-top:0px;
+    padding-bottom:5px;
+    font-size:17px;
+    background-color:#9ac1c4;
+    padding-left:5px;
+    border:1px solid black;
+    }
 #niveau2
 
-	{
-	padding-top:5px;
-	padding-bottom:5px;
-	padding-right:5px;
-	font-size:14px;
-	padding-left:15px;
-	background-color:#E6F3F4;
-	border:1px solid black;
+    {
+    padding-top:5px;
+    padding-bottom:5px;
+    padding-right:5px;
+    font-size:14px;
+    padding-left:15px;
+    background-color:#E6F3F4;
+    border:1px solid black;
 
-	}
+    }
 a
-	{
-	text-decoration:none;
-	color:#28282b;
-	}
+    {
+    text-decoration:none;
+    color:#28282b;
+    }
 a:visited
-	{
-	color:#28282b;	
-	}
-	
+    {
+    color:#28282b;  
+    }
+    
 a:hover
-	{
-	color:#7f9e7b;
-	}
+    {
+    color:#7f9e7b;
+    }
 a.langue, a.langue:visited
-	{
-	color:#b2dbdf;
-	}
+    {
+    color:#b2dbdf;
+    }
 
 td.content
-	{ 
-	width: 85%;
-	vertical-align:top;
-	background-color:#E3E3E3;
-	font-size:14px;
-	padding:10px 10px 10px 10px;
-	}
+    { 
+    width: 85%;
+    vertical-align:top;
+    background-color:#E3E3E3;
+    font-size:14px;
+    padding:10px 10px 10px 10px;
+    }
 
 div.fill
-	{ 
-	background-color:#E3E3E3;
-	}
+    { 
+    background-color:#E3E3E3;
+    }
 
 
 ol 
-	{ 
-	margin-left : 20px;
-	}
+    { 
+    margin-left : 20px;
+    }
 
 div.bsd
-	{ 
-	margin-left:20px;
-	font-family: courier
-	}
-h2,h3,h5
-	{
-	color:#313134;
-	border-bottom:1px solid black
-	}
+    { 
+    margin-left:20px;
+    font-family: courier
+    }
+h2,h3
+    {
+    color:#313134;
+    border-bottom:1px solid black
+    }
 li 
-	{ 
-	list-style-type: circle ; 
-	}
+    { 
+    list-style-type: circle ; 
+    }
